[package]
name = "rhodan"
version = "0.1.0"
authors = ["jxhn <1396009+jxhn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Simple and asyncronous Shodan API wrapper"
readme = "README.md"
repository = "https://github.com/jxhn/rhodan"
keywords = ["shodan", "api", "async"]
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [dev-dependencies]
# dotenv = "0.14.0"
# tokio = { version = "0.2.22", features = ["rt-threaded", "macros"] }

